--- a/example.html
+++ b/example.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    ?
+    <script>
+        console.log('我是index.html');
+    </script>
    <div id="root"></div>
 </body>
 </html>
